--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
+    "chalk": "^5.3.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
