--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "ioredis": "^5.8.2",
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
@@ -51,9 +53,9 @@
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
-    "chalk": "^5.3.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "tls": "^0.0.1",
     "vaul": "^1.1.2",
     "zod": "^4.1.13"
   },
